--- a/flush/backend/patient-service/package.json
+++ b/flush/backend/patient-service/package.json
@@ -2,8 +2,11 @@
   "name": "patient-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
+    "build": "tsc",
+    "start": "npm run build && node ./src/dist/app.js",
+    "dev": "nodemon src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,22 +14,22 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/express": "^5.0.1",
+    "express": "^5.1.0",
+    "pg": "^8.15.6",
+    "typeorm": "^0.3.23",
     "amqplib": "^0.10.8",
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.15.6",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.23"
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.17",
+    "ts-node": "^10.9.2",
+    "nodemon": "^3.1.10",
     "@types/amqplib": "^0.10.7",
     "@types/body-parser": "^1.19.5",
-    "@types/node": "^22.15.17",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
