--- a/flush/backend/auth-service/Dockerfile
+++ b/flush/backend/auth-service/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:23-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
+# Install build dependencies and npm packages
 RUN npm install
 COPY . .
 CMD ["npm", "start"]
