--- a/flush/backend/docker-compose.yaml
+++ b/flush/backend/docker-compose.yaml
@@ -1,6 +1,18 @@
 version: "3.8"
 
 services:
+  # RabbitMQ for event-driven communication
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    expose:
+      - "5672"
+      - "15672"
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
   # Kong API Gateway
   kong:
     image: kong:2.8.1
@@ -21,6 +33,9 @@ services:
   # Authentication Service
   auth-service:
     build: ./auth-service
+    volumes:
+      - ./auth-service:/usr/src/app
+      - /usr/src/app/node_modules # Anonymous volume for node_modules
     environment:
       - DATABASE_URL=postgres://auth_user:auth_pass@auth-db:5432/auth_db
     depends_on:
@@ -66,14 +81,7 @@ services:
       - portal-db
       - rabbitmq
 
-  # RabbitMQ for event-driven communication
-  rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-
-  # Databases (one per service)
+    # Databases (one per service)
   auth-db:
     image: postgres:13
     environment:
