--- a/flush/backend/auth-service/package.json
+++ b/flush/backend/auth-service/package.json
@@ -15,7 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "amqplib": "^0.10.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.2",
