--- a/flush/backend/doctor-service/package.json
+++ b/flush/backend/doctor-service/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "pg": "^8.16.0",
     "typeorm": "^0.3.23"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
+    "@types/pg": "^8.15.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
