--- a/flush/backend/patient-service/package.json
+++ b/flush/backend/patient-service/package.json
@@ -14,22 +14,23 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "pg": "^8.15.6",
-    "typeorm": "^0.3.23",
     "amqplib": "^0.10.8",
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "reflect-metadata": "^0.2.2"
+    "pg": "^8.15.6",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.23"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.17",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.1.10",
     "@types/amqplib": "^0.10.7",
     "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.15.17",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
