--- a/flush/backend/api-gateway/kong.yml
+++ b/flush/backend/api-gateway/kong.yml
@@ -1,4 +1,5 @@
 _format_version: "1.1"
+
 services:
   - name: auth-service
     url: http://auth-service:3000
@@ -22,6 +23,7 @@ services:
           key_claim_name: "iss"
           secret_is_base64: false
           claims_to_verify: ["exp"]
+          secret: "your_jwt_secret"
       - name: acl
         config:
           hide_groups_header: true
