--- a/flush/backend/api-gateway/kong.yml
+++ b/flush/backend/api-gateway/kong.yml
@@ -1,6 +1,12 @@
 _format_version: "1.1"
+
+consumer_groups:
+  - name: doctors
+
 consumers:
   - username: "auth-service-consumer"
+    groups:
+      - doctors
     jwt_secrets:
       - key: "auth-service"
         algorithm: "HS256"
@@ -69,6 +75,7 @@ services:
           claims_to_verify: ["exp"]
       - name: acl
         config:
+          include-consumer-groups: true
           hide_groups_header: true
           allow:
             - doctors
