--- a/flush/frontend/package.json
+++ b/flush/frontend/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-table": "^8.21.3",
+    "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
