--- a/flush/backend/auth-service/package.json
+++ b/flush/backend/auth-service/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
+    "better-auth": "^1.2.8",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
@@ -26,9 +29,12 @@
     "@types/amqplib": "^0.10.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.18",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^22.15.17",
+    "@types/pg": "^8.15.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
