--- a/flush/backend/auth-service/package.json
+++ b/flush/backend/auth-service/package.json
@@ -12,11 +12,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
+    "@auth/express": "^0.10.1",
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
-    "better-auth": "^1.2.8",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
