--- a/flush/frontend/package.json
+++ b/flush/frontend/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
     "react": "^19.0.0",
