--- a/flush/backend/auth-service/src/.env
+++ b/flush/backend/auth-service/src/.env
@@ -1,3 +1,7 @@
 GOOGLE_CLIENT_ID="hello"
 GOOGLE_CLIENT_SECRET="hello"
 AUTH_SECRET="your_jwt_secret"
+BETTER_AUTH_SECRET="your_jwt_secret"
+DATABASE_URL="postgresql://auth_user:auth_pass@auth-db:5432/auth_db?schema=public" # Replace with your actual connection string
+JWT_SECRET="your_super_secret_jwt_key" # Replace with a strong, unique secret
+PORT=3000
